--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Painel do Mestre RPG</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.CSS">
 </head>
 <body>
   <aside class="sidebar">
@@ -27,7 +27,7 @@
     <section id="fichas" class="tab active">
       <h2>Fichas de Personagem</h2>
       <div id="fichas-container">
-        <!-- Fichas vadia -->
+        <!-- Fichas de personagem -->
         <button id="add-ficha">Adicionar Ficha</button>
         <div id="fichas-list"></div>
       </div>
